tests/syntax_error/import_missing_dot.jou
import "blahblah.jou"  # Error: import path must start with 'stdlib/' (standard-library import) or a dot (relative import)
